Fixed layout issues in syllabus, and added L2 slides.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -10,3 +10,12 @@ img.bottomlogo {
     max-height: 4em;
     float:right; 
 } 
+
+th, td {
+padding: 6px 13px;
+border: 1px solid #ddd;
+}
+
+th {
+font-weight: bold;
+}
